Level UI now has its dedicated class, also added a StaticImageDisplay wrapper class for static images